# DFCXX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  DFCXXConfig.cmake.in
examples/: CMakeLists.txt
examples/addconst/: addconst.h
examples/addconst/1/: CMakeLists.txt  main.cpp
examples/matrixmul2/: CMakeLists.txt  matrixmul2.h
examples/matrixmul2/1/: CMakeLists.txt  main.cpp
examples/movingsum/: movingsum.h
examples/movingsum/1/: CMakeLists.txt  main.cpp
examples/movingsum/2/: CMakeLists.txt  main.cpp
examples/muxmul/: muxmul.h
examples/muxmul/1/: CMakeLists.txt  main.cpp
examples/scalar3/: scalar3.h
examples/scalar3/1/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  simple.h
examples/simple/1/: CMakeLists.txt  main.cpp
examples/simple/2/: CMakeLists.txt  main.cpp
include/dfcxx/: CMakeLists.txt  DFCXX.h  channel.h  constant.h  control.h  graph.h  io.h  kernel.h  kernstorage.h  node.h  offset.h  typedefs.h  var.h
include/dfcxx/builders/: builder.h
include/dfcxx/typebuilders/: builder.h
include/dfcxx/types/: fixed.h  float.h  type.h
include/dfcxx/varbuilders/: builder.h
include/dfcxx/vars/: constant.h  scalar.h  stream.h  var.h  vars.h
includeDev/dfcxx/: CMakeLists.txt  converter.h
includeDev/dfcxx/IRbuilders/: builder.h  converter.h
includeDev/dfcxx/builders/: builder.h
lib/cmake/dfcxx/: DFCXXConfig.cmake
lib/dfcxx/: CMakeLists.txt  channel.cpp  constant.cpp  control.cpp  converter.cpp  graph.cpp  io.cpp  kernel.cpp  kernstorage.cpp  node.cpp  offset.cpp  var.cpp
lib/dfcxx/IRbuilders/: CMakeLists.txt  builder.cpp  converter.cpp  utils.cpp
lib/dfcxx/builders/: CMakeLists.txt  builder.cpp
lib/dfcxx/typebuilders/: CMakeLists.txt  builder.cpp
lib/dfcxx/types/: fixed.cpp  float.cpp  type.cpp
lib/dfcxx/varbuilders/: CMakeLists.txt  builder.cpp
lib/dfcxx/vars/: CMakeLists.txt  constant.cpp  scalar.cpp  stream.cpp  var.cpp
