macro(ADD_DFCXX_TEST name configuration)
    add_executable(${name}_test${configuration} main.cpp)
    get_filename_component(dir "${CMAKE_CURRENT_LIST_FILE}" PATH)
    get_filename_component(dir "${dir}" PATH)
    target_include_directories(${name}_test${configuration} PUBLIC ${dir})
    message(STATUS ${name}_test${configuration})
    target_link_libraries(${name}_test${configuration} DFCXX::DFCXX)
endmacro()

add_subdirectory(simple)
add_subdirectory(scalar3)
add_subdirectory(matrixmul2)
add_subdirectory(addconst)
add_subdirectory(muxmul)
add_subdirectory(movingsum)
